k8s/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: travel
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
