k8s/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: travel
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: travel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
